--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,3 +26,10 @@ jobs:
         name: Build
         run: |
           docker build . # will run buildx
+
+      - name: Build minimal
+        uses: docker/build-push-action@v2
+        with:
+         file: Dockerfile
+         push: false
+         platforms: linux/amd64,linux/arm64
