--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: ci
 
 on:
   push:
+    branches:
+      - master
 
 jobs:
   buildx:
@@ -19,17 +21,10 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           install: true
-      -
-        name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
-      -
+      - 
         name: Build
-        run: |
-          docker build . # will run buildx
-
-      - name: Build minimal
         uses: docker/build-push-action@v2
         with:
          file: Dockerfile
          push: false
-         platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7
+         platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/386,linux/arm/v7
