--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
         with:
          file: Dockerfile
          push: false
-         platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/386,linux/arm/v7
+         platforms: linux/ppc64le
